--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+logging.level.org.springframework.security=DEBUG
+
+
 
