--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 spring.application.name=blog
 server.port=8081
-spring.datasource.url = jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
-spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
@@ -15,6 +10,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 logging.level.org.springframework.security=DEBUG
+
+spring.profiles.active=${ENV:dev}
 
 
 
