Changes to properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,15 @@ server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+#db configurations
+spring.datasource.url = jdbc:mysql://dpg-crigkjdumphs73ck0nqg-a:5432/blogdb_b0ds
+spring.datasource.username=blogdb_b0ds_user
+spring.datasource.password=7Gw9ESgxjtkzJUNEmtN4OpD8g13HGusf
+
+#jpa configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
