--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=blog
-server.port=8081
+#server.port=8081
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #db configurations
-spring.datasource.url = jdbc:mysql://dpg-crigkjdumphs73ck0nqg-a:5432/blogdb_b0ds
+spring.datasource.url = jdbc:postgresql://dpg-crigkjdumphs73ck0nqg-a:5432/blogdb_b0ds
 spring.datasource.username=blogdb_b0ds_user
 spring.datasource.password=7Gw9ESgxjtkzJUNEmtN4OpD8g13HGusf
 
